--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-  <h1>Stuff</h1>
+  <section>
+    <div>
+      <h1>STAFF AND THEIR FAVORITE FOODS</h1>
+      <ul id="staff">
+
+      </ul>
+    </div>
+  </section>
   <script src="app/app.js"></script>
 </body>
 
